--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
   <artifactId>SoftwareManagement-tode0009</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <build>
+	<!--
       <pluginManagement>
       <plugins>
         <plugin>
@@ -12,17 +13,19 @@
           <version>1.1.0</version>
         </plugin>
       </plugins>
-    </pluginManagement>
+    </pluginManagement> -->
     
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.7.0</version>
+        <version>3.8.0</version>
         <configuration>
+		  <encoding>UTF-8</encoding>
           <source>1.8</source>
           <target>1.8</target>
           <fork>true</fork>
-          <executable>C:\Program Files\Java\jdk1.8.0_102\bin\javac</executable>
+          <executable>C:\Program Files\Java\jdk1.8.0_181\bin\javac</executable>
         </configuration>
       </plugin>
 	  
@@ -66,11 +69,34 @@
         </configuration>
       </plugin>  
       
+	  <!--
       <plugin>
         <groupId>com.soebes.maven.plugins</groupId>
         <artifactId>doxygen-maven-plugin</artifactId>
         <version>1.1.0</version>
-      </plugin>          
+      </plugin>    -->    
+
+		<plugin>
+                <groupId>com.soebes.maven.plugins</groupId>
+                <artifactId>doxygen-maven-plugin</artifactId>
+				<version>1.1.0</version>
+                <configuration>
+                    <projectName>${project.artifactId}</projectName> 
+           	        <projectNumber>${project.version}</projectNumber>
+                    <optimizeOutputJava>true</optimizeOutputJava>
+                    <extractAll>true</extractAll>
+                    <extractStatic>true</extractStatic>
+                    <recursive>true</recursive>
+                    <exclude>.git</exclude> 
+                    <!-- <recursive>true</recursive> -->
+                    <umlLook>true</umlLook>
+                    <haveGraph>true</haveGraph>
+                    <generateLatex>false</generateLatex>
+                    <generateHtml>true</generateHtml>
+					<!--<configurationFile>Doxyfile</configurationFile> -->
+                    <outputDirectory>${basedir}/target/doxygen_doc</outputDirectory>
+                </configuration>
+           </plugin>
   
     </plugins>    
   </build>
@@ -90,8 +116,7 @@
 	    <groupId>com.soebes.maven.plugins</groupId>
 	    <artifactId>doxygen-maven-plugin</artifactId>
 	    <version>1.1.0</version>
-	</dependency>
-	
+	</dependency>	
 	
 	<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-javadoc-plugin -->
 	<dependency>
@@ -109,6 +134,7 @@
 	
   </dependencies>
   
+   <!--
   	<reporting>
 	    <plugins>
 	      <plugin>
@@ -117,6 +143,6 @@
 	        <version>1.1.0</version>
 	      </plugin>
 	    </plugins>
-	</reporting>
+	</reporting> -->
 	  
 </project>
