--- a/pom.xml
+++ b/pom.xml
@@ -4,17 +4,6 @@
   <artifactId>SoftwareManagement-tode0009</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <build>
-	<!--
-      <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>com.soebes.maven.plugins</groupId>
-          <artifactId>doxygen-maven-plugin</artifactId>
-          <version>1.1.0</version>
-        </plugin>
-      </plugins>
-    </pluginManagement> -->
-    
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -68,35 +57,27 @@
           </archive>
         </configuration>
       </plugin>  
-      
-	  <!--
-      <plugin>
-        <groupId>com.soebes.maven.plugins</groupId>
-        <artifactId>doxygen-maven-plugin</artifactId>
-        <version>1.1.0</version>
-      </plugin>    -->    
 
-		<plugin>
-                <groupId>com.soebes.maven.plugins</groupId>
-                <artifactId>doxygen-maven-plugin</artifactId>
-				<version>1.1.0</version>
-                <configuration>
-                    <projectName>${project.artifactId}</projectName> 
-           	        <projectNumber>${project.version}</projectNumber>
-                    <optimizeOutputJava>true</optimizeOutputJava>
-                    <extractAll>true</extractAll>
-                    <extractStatic>true</extractStatic>
-                    <recursive>true</recursive>
-                    <exclude>.git</exclude> 
-                    <!-- <recursive>true</recursive> -->
-                    <umlLook>true</umlLook>
-                    <haveGraph>true</haveGraph>
-                    <generateLatex>false</generateLatex>
-                    <generateHtml>true</generateHtml>
-					<!--<configurationFile>Doxyfile</configurationFile> -->
-                    <outputDirectory>${basedir}/target/doxygen_doc</outputDirectory>
-                </configuration>
-           </plugin>
+	  <plugin>
+          <groupId>com.soebes.maven.plugins</groupId>
+          <artifactId>doxygen-maven-plugin</artifactId>
+		  <version>1.1.0</version>
+          <configuration>
+             <projectName>${project.artifactId}</projectName> 
+             <projectNumber>${project.version}</projectNumber>
+             <optimizeOutputJava>true</optimizeOutputJava>
+             <extractAll>true</extractAll>
+             <extractStatic>true</extractStatic>
+             <recursive>true</recursive>
+             <exclude>.git</exclude>                
+             <umlLook>true</umlLook>
+             <haveGraph>true</haveGraph>
+             <generateLatex>false</generateLatex>
+             <generateHtml>true</generateHtml>
+			 <configurationFile>${basedir}/src/main/resources/Doxyfile</configurationFile>
+             <outputDirectory>${basedir}/target/doxygen_doc</outputDirectory>
+         </configuration>
+  	  </plugin>
   
     </plugins>    
   </build>
@@ -116,14 +97,7 @@
 	    <groupId>com.soebes.maven.plugins</groupId>
 	    <artifactId>doxygen-maven-plugin</artifactId>
 	    <version>1.1.0</version>
-	</dependency>	
-	
-	<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-javadoc-plugin -->
-	<dependency>
-	    <groupId>org.apache.maven.plugins</groupId>
-	    <artifactId>maven-javadoc-plugin</artifactId>
-	    <version>3.0.1</version>
-	</dependency>
+	</dependency>		
 	
 	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
 	<dependency>
@@ -132,17 +106,14 @@
 	    <version>2.11.1</version>
 	</dependency>
 	
+	<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-javadoc-plugin -->
+	<!--  
+	<dependency>
+	    <groupId>org.apache.maven.plugins</groupId>
+	    <artifactId>maven-javadoc-plugin</artifactId>
+	    <version>3.0.1</version>
+	</dependency> -->
+	
   </dependencies>
-  
-   <!--
-  	<reporting>
-	    <plugins>
-	      <plugin>
-	        <groupId>com.soebes.maven.plugins</groupId>
-	        <artifactId>doxygen-maven-plugin</artifactId>
-	        <version>1.1.0</version>
-	      </plugin>
-	    </plugins>
-	</reporting> -->
 	  
 </project>
