--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
 		  <encoding>UTF-8</encoding>
           <source>1.8</source>
           <target>1.8</target>
-          <fork>true</fork>
-          <executable>C:\Program Files\Java\jdk1.8.0_181\bin\javac</executable>
+          <!--   <fork>true</fork>
+          <executable>C:\Program Files\Java\jdk1.8.0_181\bin\javac</executable> -->
         </configuration>
       </plugin>
 	  
