--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,18 @@
              <outputDirectory>${basedir}/target/doxygen_doc</outputDirectory>
          </configuration>
   	  </plugin>
+  	  
+  	  <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>3.0.1</version>
+        <configuration>
+		  <encoding>UTF-8</encoding>
+		  <docencoding>UTF-8</docencoding>
+		  <charset>UTF-8</charset>
+		  <overview>${basedir}/src/main/resources/doc-files/overview.html</overview>
+        </configuration>
+      </plugin>
   
     </plugins>    
   </build>
@@ -107,12 +119,11 @@
 	</dependency>
 	
 	<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-javadoc-plugin -->
-	<!--  
 	<dependency>
 	    <groupId>org.apache.maven.plugins</groupId>
 	    <artifactId>maven-javadoc-plugin</artifactId>
 	    <version>3.0.1</version>
-	</dependency> -->
+	</dependency>
 	
   </dependencies>
 	  
