--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,7 @@
 		  <encoding>UTF-8</encoding>
 		  <docencoding>UTF-8</docencoding>
 		  <charset>UTF-8</charset>
+		  <docfilessubdirs>${basedir}/src/main/resources/doc-files</docfilessubdirs>
 		  <overview>${basedir}/src/main/resources/doc-files/overview.html</overview>
         </configuration>
       </plugin>
